- Fixed laggy see more dialog on mobile phones. - Profile image now scrolls with you in the see more dialog. - Changed icons, now the right icons will shown when viewing on other browsers. - Everything is responsive now.

--- a/Studenten/css/login.css
+++ b/Studenten/css/login.css
@@ -10,3 +10,6 @@ body {
     display: table-cell;
     vertical-align: middle;
 }
+.material-icons {
+    line-height: inherit;
+}
